--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ jobs:
       - cmake .
       - cmake --build .
       #- cmake --build . --target test
-      - cmake --build . --target package
+      #- cmake --build . --target package
       #deploy:
         #provider: script
         #skip_cleanup: true
