--- a/homework1/task1/test/CMakeLists.txt
+++ b/homework1/task1/test/CMakeLists.txt
@@ -1,11 +1,24 @@
 cmake_minimum_required (VERSION 3.1)
 
-project(homework1_test)
+project(homework1_task1_test)
 
-#set(HDRS )
+find_package(Boost COMPONENTS unit_test_framework regex REQUIRED)
+
+set(HDRS ../include/version.hpp)
          
-set(SRCS main.cpp)
+set(SRCS main.cpp ../version.cpp)
 
 add_executable(${PROJECT_NAME} ${SRCS} ${HDRS})
 
-include_directories(../include/)
+target_include_directories(${PROJECT_NAME} PRIVATE 
+    ../include/
+    ${Boost_INCLUDE_DIR}
+)
+
+target_link_libraries(${PROJECT_NAME}
+    ${Boost_LIBRARIES}
+)
+
+enable_testing()
+
+add_test(homework1 ${PROJECT_NAME})
