Отладка и рабочая версия

--- a/homework1/task2/CMakeLists.txt
+++ b/homework1/task2/CMakeLists.txt
@@ -6,11 +6,10 @@ set(HDRS include/ipv4.hpp)
          
 set(SRCS src/main.cpp src/ipv4.cpp)
 
-add_executable(${PROJECT_NAME} ${SRCS} ${HDRS} ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES})
+add_executable(${PROJECT_NAME} ${SRCS} ${HDRS})
 
 target_include_directories(${PROJECT_NAME} PRIVATE 
     include/
-    ${GTEST_INCLUDE_DIRS}
 )
 
 add_subdirectory(test)
