--- a/homework1/task2/test/CMakeLists.txt
+++ b/homework1/task2/test/CMakeLists.txt
@@ -2,11 +2,18 @@ cmake_minimum_required (VERSION 3.1)
 
 project(homework1_task2_test)
 
+# Не понимаю почему так: 
+# Без этой команды GTEST_INCLUDE_DIRS = D:/Projects/googletest/googletest/include
+# C ней            GTEST_INCLUDE_DIRS = D:/Projects/googletest
+# Причем последняя ссылка неправильна
 find_package(GTest REQUIRED)
 
-set(HDRS )
+set(GTEST_INCLUDE_DIRS D:/Projects/googletest/googletest/include)
+#message("${GTEST_INCLUDE_DIRS}")
+
+set(HDRS ../include/ipv4.hpp)
          
-set(SRCS main.cpp)
+set(SRCS main.cpp ipv4.cpp ../src/ipv4.cpp)
 
 add_executable(${PROJECT_NAME} ${SRCS} ${HDRS})
 
@@ -16,7 +23,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 )
 
 target_link_libraries(${PROJECT_NAME}
-    ${GTEST_BOTH_LIBRARIES}
+    ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES}
 )
 
 enable_testing()
