--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
       - echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list
       - sudo apt-get update -qq
       script:
-      - cmake .
+      - cmake . -DGTEST_ROOT=/usr/src/gtest
       - cmake --build .
       #- cmake --build . --target test
       #- cmake --build . --target package
