--- a/homework1/task2/CMakeLists.txt
+++ b/homework1/task2/CMakeLists.txt
@@ -8,6 +8,11 @@ set(SRCS src/main.cpp src/ipv4.cpp)
 
 add_executable(${PROJECT_NAME} ${SRCS} ${HDRS})
 
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    CXX_STANDARD 14
+    CXX_STANDARD_REQUIRED ON
+)
+
 target_include_directories(${PROJECT_NAME} PRIVATE 
     include/
 )
