--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
       script:
       - cmake . -DGTEST_ROOT=/usr/src/gtest
       - cmake --build .
-      #- cmake --build . --target test
+      - cmake --build . --target test
       #- cmake --build . --target package
       #deploy:
         #provider: script
