--- a/homework1/task1/CMakeLists.txt
+++ b/homework1/task1/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 3.1)
 
-if(NOT DEFINED ENV{TRAVIS_BUILD_NUMBER})
-    set(ENV{TRAVIS_BUILD_NUMBER} 1)
-endif()
+# if(NOT DEFINED ENV{TRAVIS_BUILD_NUMBER})
+#     set(ENV{TRAVIS_BUILD_NUMBER} 1)
+# endif()
 
 set(PROJECT_BUILD_NUMBER $ENV{TRAVIS_BUILD_NUMBER})
 
@@ -19,3 +19,15 @@ target_include_directories(${PROJECT_NAME} PRIVATE
     include/)
 
 add_subdirectory(test)
+
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
+
+set(CPACK_GENERATOR DEB)
+
+set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+
+set(CPACK_PACKAGE_CONTACT example@example.com)
+
+include(CPack)
