--- a/homework1/task1/CMakeLists.txt
+++ b/homework1/task1/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required (VERSION 3.1)
 
-# if(NOT DEFINED ENV{TRAVIS_BUILD_NUMBER})
-#     set(ENV{TRAVIS_BUILD_NUMBER} 1)
-# endif()
+if(NOT ENV{TRAVIS_BUILD_NUMBER})
+    set(ENV{TRAVIS_BUILD_NUMBER} 1)
+endif()
 
 set(PROJECT_BUILD_NUMBER $ENV{TRAVIS_BUILD_NUMBER})
 
-project(homework1 VERSION 0.0.${PROJECT_BUILD_NUMBER})
+project(homework1_task1 VERSION 0.0.${PROJECT_BUILD_NUMBER})
 
 configure_file(src/version.cpp.in version.cpp)
 
@@ -18,9 +18,11 @@ add_executable(${PROJECT_NAME} ${HDRS} ${SRCS})
 target_include_directories(${PROJECT_NAME} PRIVATE 
     include/)
 
+enable_testing()
+
 add_subdirectory(test)
 
-install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
+install(TARGETS homework1_task1 RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
