--- a/.travis.yml
+++ b/.travis.yml
@@ -37,3 +37,23 @@ jobs:
         skip_cleanup: true
         script:
         - curl -T homework1_task2-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ualexandersorvin:$BINTRAY_API_KEY "https://api.bintray.com/content/alexandersorvin/otus/homework1/homework1_task2-0.0.$TRAVIS_BUILD_NUMBER/$TRAVIS_BUILD_NUMBER/homework1_task2-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
+    - stage: homework2
+      before_script:
+      - sudo apt-get install libgtest-dev
+      - sudo apt-get install cmake
+      - cd /usr/src/gtest
+      - sudo cmake CMakeLists.txt
+      - sudo make
+      - cd -
+      - echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list
+      - sudo apt-get update -qq
+      script:
+      - cmake homework2 -DGTEST_ROOT=/usr/src/gtest
+      - cmake --build .
+      - cmake --build . --target test
+      - cmake --build . --target package
+      deploy:
+        provider: script
+        skip_cleanup: true
+        script:
+        - curl -T homework2-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ualexandersorvin:$BINTRAY_API_KEY "https://api.bintray.com/content/alexandersorvin/otus/homework1/homework1_task2-0.0.$TRAVIS_BUILD_NUMBER/$TRAVIS_BUILD_NUMBER/homework2-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
