--- a/.travis.yml
+++ b/.travis.yml
@@ -39,12 +39,13 @@ jobs:
         - curl -T homework1_task2-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ualexandersorvin:$BINTRAY_API_KEY "https://api.bintray.com/content/alexandersorvin/otus/homework1/homework1_task2-0.0.$TRAVIS_BUILD_NUMBER/$TRAVIS_BUILD_NUMBER/homework1_task2-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
     - stage: homework2
       before_script:
-      - sudo apt-get install libgtest-dev
       - sudo apt-get install cmake
-      - cd /usr/src/gtest
-      - sudo cmake CMakeLists.txt
-      - sudo make
-      - cd -
+      - cd ..
+      - git clone --single-branch --branch release-1.10.0 https://github.com/google/googletest.git
+      - cd googletest
+      - sudo cmake . -DCMAKE_INSTALL_PREFIX=/usr/src/gtest
+      - sudo cmake --build . --target install
+      - cd ../otus
       - echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list
       - sudo apt-get update -qq
       script:
