--- a/homework2/test/CMakeLists.txt
+++ b/homework2/test/CMakeLists.txt
@@ -4,8 +4,12 @@ project(test_homework2)
 
 #find_package(GTest REQUIRED)
 
+set(CMAKE_THREAD_LIBS_INIT "-lpthread")
+set(CMAKE_HAVE_THREADS_LIBRARY 1)
+set(CMAKE_USE_WIN32_THREADS_INIT 0)
+set(CMAKE_USE_PTHREADS_INIT 1)
+
 include(${GTEST_ROOT}/lib/cmake/GTest/GTestTargets.cmake)
-set(Threads::Threads pthread)
 
 set(HDRS )
          
