--- a/.travis.yml
+++ b/.travis.yml
@@ -46,8 +46,10 @@ jobs:
       - sudo cmake . -DCMAKE_INSTALL_PREFIX=/usr/src/gtest
       - sudo cmake --build . --target install
       - cd ../otus
-      - echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list
+      - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
       - sudo apt-get update -qq
+      - sudo apt-get install -qq g++-6
+      - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
       script:
       - mkdir build
       - cd build
