--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,9 @@ jobs:
       - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
       - sudo apt-get update -qq
       - sudo apt-get install -qq g++-6
+      - sudo apt-get install -qq gсс-6
       - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
+      - sudo update-alternatives --install /usr/bin/gсс gсс /usr/bin/gсс-6 90
       script:
       - mkdir build
       - cd build
