4 домашнее задание, пустое.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ enable_testing()
 add_subdirectory(homework1)
 add_subdirectory(homework2)
 add_subdirectory(homework3)
+add_subdirectory(homework4)
